# warpsdk

./: .gitignore  .gitmodules  build-llvm.cmake  lib_cmakequery.cmake  lib_genpkg.cmake  lib_pkgpickup.cmake  phase0.cmake  phase0crt.cmake  phase0libc.cmake  phase1.cmake  phase2.cmake  protopaths.cmake  query.json  run_localbuild.cmake  runcheck.cmake
check/: CMakeLists.txt  check.c  check2.cpp  init_thr.S  warp.profile  warpcrt.c
check2/: CMakeLists.txt  hello.c  hello2.c  hello3.c
cmake/: warp-toolchain-phase0.cmake  warp-toolchain-phase1.cmake  warp-toolchain.cmake
cmake/Modules/: YuniwarpPlatformCommon.cmake
cmake/Modules/Platform/: Yuniwarp.cmake  YuniwarpPhase0.cmake  YuniwarpPhase1.cmake
crt/: CMakeLists.txt  warpcrt_exec.c
packaging/build0/: conanfile.py  conanfile.txt
packaging/build1/: conanfile.py
packaging/cmake-tc/: conanfile.py
packaging/crt/: conanfile.py
packaging/llvm/: conanfile.py
packaging/llvm-temp/: conanfile.py
packaging/localbuild/: conanfile.py  warp.profile
packaging/old-sysroot/: conanfile.py
packaging/sysroot/: conanfile.py
packaging/toolchain/: conanfile.py
projsamples/type2/: README.md  toolchain.cmake  warpsdk-setup.cmake
toolchain/cmake/: _sdkpaths.cmake  warp-binutils.cmake  warp-cc.cmake
yuniposix/: workaround.syms
yuniposix/include/: __external_threading  yuni_threads.h
yuniposix/include/machine/: _threads.h
